# book-review

./: .gitignore  README.md  pyproject.toml  settings.toml  sonar-project.properties  tools.py  yoyo.ini
.github/workflows/: build.yml  ci.yml
book_review/: app.py  config.py  main.py
book_review/controller/http/: app.py  coder.py  models.py
book_review/dao/: reviews.py  users.py
book_review/db/: __init__.py  repository.py  reviews.py  users.py
book_review/migrations/: 20240420_01_e7oe1-init.sql
book_review/models/: book.py  library.py  reviews.py  user.py
book_review/openlibrary/: client.py
book_review/repository/: reviews.py  users.py
book_review/ui/: http_app.py
book_review/ui/http/: app.py  models.py
book_review/usecase/: library.py  openlibrary.py  reviews.py  users.py
frontend/: .eslintrc.cjs  .gitignore  README.md  index.html  orval.config.cjs  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: home-page.spec.js  login-page.spec.js
frontend/src/: App.vue  constants.js  main.js
frontend/src/api/: index.ts
frontend/src/assets/: main.css
frontend/src/components/: TheHeader.vue  XButton.spec.js  XButton.vue
frontend/src/composables/: useProtection.ts
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: BookView.vue  HomeView.vue  LoginView.vue  ProfileView.vue
integration/: test_db.py  test_openlibrary_client.py
locust/: locust.py
tests/: test_coder.py  test_openlibrary_usecase.py  test_reviews_usecase.py  test_users_usecase.py
