[tool.poetry]
name = "book-review-platform"
version = "0.1.0"
description = "The collaborative hub for literary enthusiasts"
authors = []
license = "Unlicense"
readme = "README.md"
packages = [{ include = "book_review" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.0"
aiohttp = {extras = ["speedups"], version = "^3.9.5"}
setuptools = "^69.5.1"
argon2-cffi = "^23.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
yoyo-migrations = "^8.2.0"
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-subtests = "^0.12.1"

[tool.poetry.scripts]
serve = "book_review.main:main"
test = "tools:test"
format = "tools:format"
lint = "tools:lint"
typecheck = "tools:typecheck"
check = "tools:check"

migrations-apply = "tools:migrations_apply"
migrations-rollback = "tools:migrations_rollback"
migrations-list = "tools:migrations_list"
migrations-new = "tools:migrations_new"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
  "integration",
]
filterwarnings = ["ignore::DeprecationWarning:yoyo.*:"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
